<resources>
    <string name="app_name">DicodingEvent</string>
    <string name="title_home">Dicoding Event</string>
    <string name="title_finished_event">Finished Event</string>
    <string name="bot_home">Home</string>
    <string name="bot_active_event">Upcoming</string>
    <string name="bot_finished_event">Finished</string>
    <string name="event_name">Event Name</string>
    <string name="summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_active_event">Upcoming Event</string>
    <string name="img_desc_event_image">Event Image</string>
    <string name="title_event_owner">Penyelenggara</string>
    <string name="title_date">Waktu</string>
    <string name="title_quota">Sisa Kuota</string>
    <string name="btn_register">Register</string>
    <string name="searchbar_hint">Search</string>
    <string name="text_result">Hasil pencarian</string>
    <string name="empty_search_result">Hasil pencarian tidak ditemukan</string>
    <string name="thumbnail">Thumbnail</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_settings">Settings</string>
    <string name="dark_mode">Darkmode</string>
    <string name="title_favorite">Favorite</string>
    <string name="save_favorite">Save favorite</string>
</resources>