<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dicodingevent.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_event_detail_activity"
            app:destination="@id/event_detail_activity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_active_event"
        android:name="com.example.dicodingevent.ui.active_event.ActiveEventFragment"
        android:label="@string/title_active_event"
        tools:layout="@layout/fragment_active_event" >
        <action
            android:id="@+id/action_navigation_active_event_to_event_detail_activity"
            app:destination="@id/event_detail_activity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished_event"
        android:name="com.example.dicodingevent.ui.finished_event.FinishedEventFragment"
        android:label="@string/title_finished_event"
        tools:layout="@layout/fragment_finished_event" >
        <action
            android:id="@+id/action_navigation_finished_event_to_event_detail_activity"
            app:destination="@id/event_detail_activity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.dicodingevent.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_event_detail_activity"
            app:destination="@id/event_detail_activity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.dicodingevent.ui.settings.SettingsFragment"
        tools:layout="@layout/fragment_settings" />

    <activity
        android:id="@+id/event_detail_activity"
        android:name="com.example.dicodingevent.ui.event_detail.EventDetailActivity"
        tools:layout="@layout/activity_event_detail" >
        <argument
            android:name="id"
            app:argType="integer" />
    </activity>

</navigation>